# industrial-vision-inspection-system

./: .dockerignore  .env.docker.example  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: STEP_16_RELEASE_REPORT.md
src/industrial_vision/: __init__.py  batch_processing.py  config.py  container_health.py  dashboard.py  edge_detection.py  feature_extraction.py  image_io.py  inference_api.py  inference_service.py  inspection.py  ml_baseline.py  model_evaluation.py  model_persistence.py  morphology.py  preprocessing.py  release_report.py  result_export.py  smoke_test.py  step02_load_and_inspect.py  step03_preprocessing.py  step04_edges_and_contours.py  step05_morphology.py  step06_rule_based_inspection.py  step07_save_results.py  step08_batch_processing.py  step09_feature_extraction.py  step10_classical_ml_baseline.py  step11_model_evaluation.py  step12_model_persistence.py  step13_prepare_inference_model.py  step14_prepare_dashboard_model.py  step16_portfolio_release.py
src/industrial_vision_inspection_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_batch_processing.py  test_dashboard.py  test_docker_packaging.py  test_edge_detection.py  test_feature_extraction.py  test_image_io.py  test_inference_api.py  test_inspection.py  test_ml_baseline.py  test_model_evaluation.py  test_model_persistence.py  test_morphology.py  test_preprocessing.py  test_release_report.py  test_result_export.py  test_smoke.py
