[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-vision-inspection-system"
version = "0.1.0"
description = "Industrial computer vision inspection system using OpenCV, ML, FastAPI, and dashboard components."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
